--- a/index.html
+++ b/index.html
@@ -118,14 +118,16 @@
                         <button class="shop-collection-btn">SHOP NOW</button>
                     </a>
                 </div>
-                <div class="collection-images-container">
-                    <div class="circle1 circles"></div>
-                    <div class="circle2 circles"></div>
-                    <div class="circle3 circles"></div>
-                    <div class="circle4 circles"></div>
-                    <img class="collection-image-woman" src="./assets/images/technology 1.png">
+                <ul class="collection-images-container">
+                    <li class="circle1 circles">
+                        <img class="collection-image-woman" src="./assets/images/technology 1.png">
 
-                </div>
+                    </li>
+                    <li class="circle2 circles"></li>
+                    <li class="circle3 circles"></li>
+                    <li class="circle4 circles"></li>
+
+                </ul>
             </div>
             <div class="shop-media">
                 <a href="#">
@@ -477,7 +479,7 @@
         <div class="footer-container-left footer-containers">
             <h3 class="footer-titles">Get in Touch</h3>
             <p class="description">The quick fox jumps over the<br /> lazy dog</p>
-            <div class="socials">
+            <div class="socials-footer">
                 <a href="#">
                     <img src="./assets/icons/instagram icon.svg" alt="icone do instagram" class="social-icons"></a>
                 <a href="#">
